[tool.poetry]
name = "oysterpack-smart-code"
version = "0.1.0"
description = "OysterPack SMART Code"
authors = ["OysterPack SMART, Inc."]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
mypy = "^1.11.2"
flake8 = "^7.1.1"
pylint = "^3.3.1"
bandit = "^1.7.10"
docformatter = "^1.7.5"
pytype = "^2024.9.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytype]
inputs = ['oysterpack_smart_code']
